--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 
 body {
     margin: 0;
+    top: 0;
+    display: inline-block;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -47,7 +49,6 @@ p {
 
 .about {
     height: 800px;
-    border: 1px solid red;
     background-repeat: no-repeat;
     background-size: 100%;
     background-image: url('/images/7.png');
@@ -71,4 +72,67 @@ p {
     margin-top: 150px;
     width: 40%;
     float: left;
+}
+
+.text-box {
+    text-align: center;
+    width: 40%;
+    margin: 0 auto;
+}
+
+.food-box {
+    width: 80%;
+    margin: 0 auto;
+    height: auto;
+    display: block;
+
+}
+
+.recipie {
+    background-color: #f7f5f4;
+    width: 100%;
+    height: 700px;
+    margin: 0px;
+}
+
+.third-width {
+    width: 30%;
+    margin-left: 30px;
+    height: auto;
+    float: left;
+    background: #fff;
+    border-radius: 15px;
+    box-shadow: 6px 5px 5px 5px rgb(202, 202, 202);
+}
+
+.third-width img {
+    display: block;
+    margin: 20px auto;
+
+    width: 80%;
+    border-radius: 15px;
+    height: 270px;
+}
+
+.recipie-description {
+    margin-left: 40px;
+
+}
+
+.social-media {
+    margin: 50px auto;
+    width: 80%;
+    text-align: center;
+    height: 150px;
+    box-shadow: 2px 2px 2px 3px rgb(245, 241, 241);
+    border-radius: 15px;
+
+}
+
+.media-common {
+    float: left;
+    width: 30%;
+    padding: 20px;
+
+
 }
