--- a/style.css
+++ b/style.css
@@ -1,3 +1,46 @@
+nav {
+    align-items: center;
+}
+
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    background-color: #f7eeee;
+}
+
+li {
+
+    float: left;
+    width: auto;
+
+
+}
+
+li a {
+    display: block;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #ddd;
+}
+
+li a.active {
+    color: white;
+    background-color: #888888;
+}
+
+
+
 .half-width {
     margin-top: 100px;
     width: 40%;
