--- a/style.css
+++ b/style.css
@@ -91,13 +91,14 @@ p {
 }
 
 .about {
-    height: 800px;
+    height: 790px;
     background-repeat: no-repeat;
     background-size: 100%;
+    margin-bottom: 0px;
     background-image: url('/images/7.png');
 }
 
-.about img {
+.about-img img {
     width: 458px;
     height: 670px;
     top: 64px;
@@ -131,11 +132,12 @@ p {
 
 }
 
+
+
 .recipie {
     background-color: #f7f5f4;
     width: 100%;
     height: 700px;
-    margin: 0px;
 }
 
 .third-width {
