--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-nav {
-    align-items: center;
-}
-
-
 ul {
     list-style-type: none;
     margin: 0;
@@ -19,6 +14,13 @@ li {
     float: left;
     width: auto;
 
+
+}
+
+section {
+    margin-bottom: 0px;
+    display: block;
+    margin-top: 0px;
 
 }
 
@@ -94,8 +96,9 @@ p {
     height: 790px;
     background-repeat: no-repeat;
     background-size: 100%;
-    margin-bottom: 0px;
-    background-image: url('/images/7.png');
+    margin-bottom: 0;
+    border: 10px solid yellow;
+    background-image: url('images/7.png');
 }
 
 .about-img img {
@@ -121,23 +124,27 @@ p {
 .text-box {
     text-align: center;
     width: 40%;
-    margin: 0 auto;
+    margin: 0px auto;
+
 }
 
 .food-box {
     width: 80%;
     margin: 0 auto;
     height: auto;
-    display: block;
+
 
 }
 
 
 
 .recipie {
-    background-color: #f7f5f4;
+
     width: 100%;
     height: 700px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-image: url(images/Frame56.jpg)
 }
 
 .third-width {
