--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ p {
     height: 700px;
     background-repeat: no-repeat;
     background-size: 100%;
-    background-image: url(images/Frame56.jpg)
+    background-image: url('images/Frame56.jpg')
 }
 
 .third-width {
