--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -80,6 +85,7 @@ h1 {
 p {
     line-height: 1.6;
     color: #828282;
+    padding: 10px;
 
 }
 
@@ -93,9 +99,9 @@ p {
 }
 
 .about {
-    height: 850px;
+    height: 700px;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     margin-bottom: 0;
     background-image: url('images/7.png');
 }
@@ -115,7 +121,8 @@ p {
 
 .about-me {
     margin-right: 50px;
-    margin-top: 50px;
+    margin-left: 150px;
+    margin-top: 150px;
     width: 40%;
     float: left;
 }
@@ -124,6 +131,7 @@ p {
     text-align: center;
     width: 40%;
     margin: 0px auto;
+    padding: 50px 0;
 
 }
 
@@ -139,16 +147,16 @@ p {
 
 .recipie {
     width: 100%;
-    height: 700px;
+    height: 800px;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     background-image: url('images/Frame56.jpg')
 }
 
 .third-width {
     width: 30%;
     margin-left: 30px;
-    height: auto;
+    height: 500px;
     float: left;
     background: #fff;
     border-radius: 15px;
@@ -170,8 +178,9 @@ p {
 }
 
 .social-media {
-    margin: 50px auto;
+    margin: 70px auto;
     width: 80%;
+    padding: 20px;
     text-align: center;
     height: 150px;
     box-shadow: 2px 2px 2px 3px rgb(245, 241, 241);
@@ -182,7 +191,7 @@ p {
 .media-common {
     float: left;
     width: 30%;
-    padding: 20px;
+    padding: 40px 0;
 
 
 }
